--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "classnames": "2.3.1",
     "date-fns": "^2.28.0",
+    "mapbox-gl": "^2.10.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-datocms": "^3.0.0",
