--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "classnames": "2.3.1",
     "date-fns": "^2.28.0",
+    "eslint-config-next": "^13.0.3",
     "mapbox-gl": "^2.10.0",
-    "next": "^12.0.8",
-    "react": "^17.0.2",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
     "react-datocms": "^3.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "tiny-json-http": "^7.3.1"
   },
   "devDependencies": {
